updated css to fix spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -584,3 +584,26 @@ button.rest-button span:nth-child(4) {
   border-color: white; 
   box-shadow: 0 0 0 2px black inset;
 }
+
+/* form */
+.form-row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.form-item {
+  margin-right: 10px;
+}
+
+/* form 2*/
+.form-row2 {
+  display: flex;
+  justify-content: left;
+  margin-top: 20px;
+}
+
+.form-item2 {
+  margin-right: 71px;
+}
+
